# hpc-disease-simulation

part_1_disease/: .gitignore  CMakeLists.txt  Dockerfile  README.md  Run.txt  part_1_disease  plot_simulation.py  vaccination_curve.py  vaccination_effect.py
part_1_disease/configExample/: disease_in.ini  disease_in_backup.ini
part_1_disease/include/: Person.h  Population.h
part_1_disease/report_data/: disease_details.csv  disease_stats.csv  disease_stats_0.0.csv  disease_stats_0.1.csv  disease_stats_0.2.csv  disease_stats_0.3.csv  disease_stats_0.4.csv  disease_stats_0.5.csv  disease_stats_0.6.csv  disease_stats_0.7.csv  disease_stats_0.8.csv  disease_stats_0.9.csv  disease_stats_1.0.csv  report_data.rar
part_1_disease/simulation/: Disease.cpp  Disease.h  Person.cpp  Person.h  Population.cpp  Population.h  main.cpp  simulation.cpp  simulation.h  test.cpp  test_disease.cpp  test_person.cpp  test_population.cpp  test_touch.cpp
part_2_parallel/: CMakeLists.txt  Dockerfile  README.md  Run.txt
part_2_parallel/report_data/: output.txt
part_2_parallel/src/: GameOfLife.cpp  GameOfLife.h  GameOfLifeUI.h  LocalGameOfLife.cpp  LocalGameOfLife.h  Logger.h  main.cpp
